--- a/bundle.css
+++ b/bundle.css
@@ -4,6 +4,14 @@ html{font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica N
 .uk-container {
   max-width: 940px; }
 
+.uk-offcanvas-bar ul {
+  display: block; }
+  .uk-offcanvas-bar ul li {
+    display: block;
+    margin-bottom: 15px; }
+    .uk-offcanvas-bar ul li a {
+      display: initial; }
+
 header {
   position: fixed;
   left: 0;
